# udgmod

./: Cargo.toml  README.md
.github/workflows/: release.yml
proc/: Cargo.toml
proc/src/: lib.rs  mapped_data.rs
udgmod/: Cargo.toml
udgmod/src/: hack.rs  lib.rs  logging.rs  model.rs  mods.rs  util.rs
udgmod/src/model/: actor.rs  actor_list.rs  cam_data.rs  pchr.rs  render_obj.rs
udgmod/src/mods/: assets.rs  borderless_toggle.rs  common.rs  fix_screensize.rs  frame_advance.rs  freecam.rs  outfit.rs  shadows.rs  toko_skirt.rs
